General: Add accordion styling, and switch faq to use that.

--- a/assets/less/new/animations.less
+++ b/assets/less/new/animations.less
@@ -31,6 +31,17 @@
   }
 }
 
+@keyframes sweep {
+  0% {
+    opacity: 0;
+    margin-top: -1rem;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 1rem;
+  }
+}
+
 @keyframes float-around {
   0% {
     transform: translate(0, -4px);
