--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -1,9 +1,12 @@
 // 2024 Redesign Style
+// Bases
 @import "./new-style.less";
 @import "./new/animations.less";
 @import "./new/shadows.less";
 @import "./new/sizing.less";
 @import "./new/layout.less";
+// Components
+@import "./new/components/accordion.less";
 @import "./new/components/buttons.less";
 @import "./new/components/site-nav.less";
 
