--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -11,7 +11,7 @@
     flex-direction: row;
     margin: auto;
 
-    @media (max-width: @md) {
+    @media (max-width: @lg) {
       width: 100%;
       gap: 4rem;
       flex-direction: column;
@@ -43,7 +43,7 @@
       max-width: 300px;
     }
 
-    @media(max-width: @md) {
+    @media(max-width: @lg) {
       flex-direction: column;
       width: 100%;
       gap: 1rem;
@@ -63,7 +63,7 @@
       margin-right: 10rem;
     }
 
-    @media(max-width: @md) {
+    @media(max-width: @lg) {
       flex-direction: column;
       width: 100%;
 
@@ -100,7 +100,7 @@
         word-wrap: break-word;
       }
       span {
-        font-size: 0.75rem;
+        font-size: var(--font-regular);
       }
     }
   }
