Participate: Initial pass, still ugly.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -15,5 +15,6 @@
 @import "./pages/home.less";
 @import "./pages/who-we-are.less";
 @import "./pages/contact-us.less";
+@import "./pages/participate.less";
 
 // Page template stuff
