Downloads: Add download page (or should it be downloads page?)

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -17,5 +17,6 @@
 @import "./pages/who-we-are.less";
 @import "./pages/contact-us.less";
 @import "./pages/participate.less";
+@import "./pages/download.less";
 
 // Page template stuff
