--- a/assets/less/new/colours.less
+++ b/assets/less/new/colours.less
@@ -120,6 +120,9 @@
   --color-ink-80: #2a284b;
   --color-ink-90: #1a1838;
 
+  --color-white: #fff;
+  --color-black: #000;
+
   --bg: white;
   --txt: var(--color-ink-80);
   --accent: var(--color-blue-60);
