--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -680,6 +680,8 @@ footer {
   place-items: center;
   padding-inline: 1rem;
   padding-block: 6rem;
+  // Prevent overflow on smol devices
+  box-sizing: border-box;
 }
 
 .footer-ln {
