--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -134,6 +134,7 @@
       border-left: 3px solid var(--color-ink-70);
       border-radius: 3px;
       padding-left: 1rem;
+      margin-left: -1rem;
     }
   }
 }
