--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -6,14 +6,14 @@
     <div class="site-links">
       <div class="site-link-section">
         <ul>
-          <li><a href="{{ url('support') }}" class="dotted home">{{_('Home')}}</a></li>
+          <li><a href="{{ url('thunderbird.index') }}" class="dotted home">{{_('Home')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
         <h4>{{ _('Products') }}</h4>
         <ul>
-          <li><a href="{{ url('support') }}" class="dotted">{{_('Thunderbird Desktop')}}</a></li>
-          <li><a href="{{ url('support') }}" class="dotted">{{_('Thunderbird Mobile')}}</a></li>
+          <li><a href="{{ url('thunderbird.index') }}" class="dotted">{{_('Thunderbird Desktop')}}</a></li>
+          <li><a href="{{ url('thunderbird.index') }}" class="dotted">{{_('Thunderbird Mobile')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
@@ -31,13 +31,13 @@
         <ul>
           <li><a href="{{ url('thunderbird.about') }}" class="dotted">{{_('Who We Are')}}</a></li>
           <li><a href="{{ url('thunderbird.contact') }}" class="dotted">{{_('Contact Us')}}</a></li>
-          <li><a href="{{ url('support') }}" class="dotted">{{_('Careers')}}</a></li>
+          <li><a href="{{ url('thunderbird.careers') }}" class="dotted">{{_('Careers')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
         <h4>{{ _('Contribute') }}</h4>
         <ul>
-          <li><a href="{{ url('thunderbird.donate.form') }}" class="dotted">{{_('Donations')}}</a></li>
+          <li><a href="{{ url('thunderbird.donate') }}" class="dotted">{{_('Donations')}}</a></li>
           <li><a href="{{ url('thunderbird.participate') }}" class="dotted">{{_('Participation')}}</a></li>
         </ul>
       </div>
