General: Small testimonial tweaks, and don't build 115-homepage anymore. (Build tools can get confused on what bundle it should be building.)

--- a/assets/less/new/components/testimonial.less
+++ b/assets/less/new/components/testimonial.less
@@ -37,6 +37,10 @@
     grid-column: span 2;
     grid-row: span 2;
     background-image: linear-gradient(to left, var(--accent), transparent 90%);
+
+    @media (max-width: @md) {
+      display: flex;
+    }
   }
 
   .card-lg:nth-child(even) {
@@ -58,6 +62,10 @@
     position: absolute;
     overflow: hidden;
     width: 200%;
+
+    @media (max-width: @md) {
+      display: none;
+    }
   }
 
   .visual.unified-inbox {
