Navigation: Provide hover hint on focus.

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -127,7 +127,8 @@
           list-style: none;
           padding-top: 1rem;
 
-          &:hover {
+          &:hover,
+          &:focus-within {
             h2 {
               &:extend(.txt-gradient);
             }
